add host guidence page

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -109,6 +109,7 @@
           </div>
           <% } %>
           <a href="/help" class="dropdown-link"><span class="material-symbols-outlined me-3">support_agent</span>Help Centre</a>
+          <a href="/host/guidance" class="dropdown-link"><span class="material-symbols-outlined me-3">follow_the_signs</span>Host Guidance</a>
           <% if (currentUser) { %>
           <hr class="dropdown-divider">
           <a href="/logout" class="btn btn-air-danger w-100 py-2">Logout</a>
