styling for guidence help guidence.ejs file

--- a/views/listings/guidance.ejs
+++ b/views/listings/guidance.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
-
-<nav id="host-scroll-spy" class="navbar sticky-top bg-white border-bottom shadow-sm d-none d-lg-block" style="top: 100px; z-index: 1000;">
+<div style="max-width: 1824px; margin: 100px auto 0; ">
+<nav id="host-scroll-spy" class="navbar sticky-top bg-white border-bottom shadow-sm d-none d-lg-block" style="top: 100px;z-index: 1000;position: fixed;width: 100vw;margin: auto;left: 0vw;">
     <div class="container d-flex justify-content-center">
         <div class="nav nav-pills gap-4">
             <a class="nav-link text-dark fw-bold small active" href="#step1">01 IDENTITY</a>
@@ -183,7 +183,7 @@
         </div>
     </div>
 </div>
-
+</div>
 <style>
     :root {
         --air-danger: #ff385c;
