new add some files to improve working

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -55,7 +55,7 @@
         <span class="d-none d-sm-inline">·</span>
         <a href="#">Terms</a>
         <span class="d-none d-sm-inline">·</span>
-        <a href="#">Sitemap</a>
+        <a href="/info/webAppCreater">Web-App_creaters</a>
       </div>
       <div class="lang-currency">
         <span><i class="material-symbols-outlined fs-5">language</i> English (IN)</span>
